--- a/C++复习/STL/STL/STL.vcxproj.filters
+++ b/C++复习/STL/STL/STL.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="String.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Vector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
