--- a/C++复习/STL/STL/STL.vcxproj.filters
+++ b/C++复习/STL/STL/STL.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="String.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="Vector.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
