--- a/C++复习/STL/STL/STL.vcxproj.filters
+++ b/C++复习/STL/STL/STL.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Vector.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Listt.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
