--- a/C++复习/STL/STL/STL.vcxproj.filters
+++ b/C++复习/STL/STL/STL.vcxproj.filters
@@ -24,10 +24,7 @@
     <ClCompile Include="Vector.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Listt.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="栈和队列.cpp">
+    <ClCompile Include="map_set.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
