--- a/C++复习/STL/STL/STL.vcxproj
+++ b/C++复习/STL/STL/STL.vcxproj
@@ -64,6 +64,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AVLTree.cpp" />
     <ClCompile Include="map_set.cpp" />
     <ClCompile Include="String.cpp" />
     <ClCompile Include="test.cpp" />
