--- a/C++复习/STL/STL/STL.vcxproj.filters
+++ b/C++复习/STL/STL/STL.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="map_set.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="AVLTree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
