cgi机制和线程池

--- a/HTTP/Makefile
+++ b/HTTP/Makefile
@@ -1,8 +1,8 @@
 bin=HttpServer
-cc=g++
+cc=g++ -std=c++11
 
 $(bin):HttpServer.cc
-	$(cc) -o $@ $^ -lpthread
+	$(cc) -o $@ $^ -lpthread #-D_DEBUG_
 .PHONY:clean
 clean:
 	rm -f $(bin)
