--- a/剑指Offer/剑指Offer/剑指Offer.vcxproj.filters
+++ b/剑指Offer/剑指Offer/剑指Offer.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="算法.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="动态规划.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
