--- a/剑指Offer/剑指Offer/剑指Offer.vcxproj
+++ b/剑指Offer/剑指Offer/剑指Offer.vcxproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <ClCompile Include="test.cpp" />
     <ClCompile Include="动态规划.cpp" />
+    <ClCompile Include="回溯法.cpp" />
     <ClCompile Include="算法.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
