--- a/剑指Offer/剑指Offer/剑指Offer.vcxproj.filters
+++ b/剑指Offer/剑指Offer/剑指Offer.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="动态规划.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="回溯法.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
