--- a/剑指Offer/剑指Offer/剑指Offer.vcxproj.filters
+++ b/剑指Offer/剑指Offer/剑指Offer.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="回溯法.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="排序问题.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
